--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 services:
-  pypipublisher:
+  # pypipublisher:
+  #   build: .
+  #   env_file: .env
+  #   stdin_open: true
+  #   tty: true
+  # test: 
+  #   entrypoint: ["python", "test.py"]
+  #   build:
+  #     dockerfile: ../Dockerfile
+  #     context: tests
+  ckan-mcp-server:
     build: .
     env_file: .env
     stdin_open: true
     tty: true
+
+    entrypoint: ["python", "mcp_ckan_server.py"]
