--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   ckan-mcp-server:
-    build: .
+    build: 
+      dockerfile: tests/Dockerfile
+      context: ..
+    
     env_file: .env
     environment:
       - CKAN_URL=${CKAN_URL}
@@ -8,7 +11,7 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     volumes:
-      - ../:/app/lib
+      - ../:/app
     # working_dir: /app
     # command: python mcp_ckan_server.py
     stdin_open: true
